# coral-decimal-mask

./: pyproject.toml
.github/workflows/: ci.yml
decimal_mask/: widgets.py
tests/: forms.py  settings.py  test_widgets.py  urls.py  views.py
tests/templates/: index.html
